# __methodz

./: README.md  pyproject.toml  requirements-test.txt  setup.py  test_methodz.ipynb  {{name}}.ipynb  {{name}}.py
.github/workflows/: main.yml
methodz/: __init__.py
{{name}}/: __init__.py
